--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,8 @@
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
 
     /* Type Checking */
-    "strict": true,                                      /* Enable all strict type-checking options. */
+    "strict": true,
+    "skipLibCheck": true
     // "alwaysStrict": true,                             /* Ensure 'use strict' is always emitted. */
   },
 }
