dist linking worked nit

--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "private": true,
   "scripts": {
     "build": "tsc",
+    "postbuild": "cp src/metadata.json dist/metadata.json",
     "build:full": "npm run build && npm run link:full",
     "rebuild:full": "npm run rebuild && npm run link:full",
     "link:full": "npm run link && npm run reload",
     "watch": "tsc -w",
     "clean": "rm -rf dist",
     "rebuild": "npm run clean && npm run build",
-    "link": "ln -sf $(pwd)/dist ~/.local/share/gnome-shell/extensions/rail-speed@raphael-wirnsberger.at",
+    "link": "ln -s $(pwd)/dist ~/.local/share/gnome-shell/extensions/rail-speed@raphael-wirnsberger.at",
+    "links": "echo $(pwd)/dist",
     "reset": "gnome-extensions reset rail-speed@raphael-wirnsberger.at",
     "enable": "gnome-extensions enable rail-speed@raphael-wirnsberger.at",
     "disable": "gnome-extensions disable rail-speed@raphael-wirnsberger.at",
