--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "tsc",
-    "postbuild": "cp src/metadata.json dist/metadata.json",
+    "build": "tsc && cp src/metadata.json dist/metadata.json",
     "build:full": "npm run build && npm run link:full",
     "rebuild:full": "npm run rebuild && npm run link:full",
     "link:full": "npm run link && npm run reload",
     "watch": "tsc -w",
+    "log": "journalctl -f -o cat | grep rail-speed",
     "clean": "rm -rf dist",
     "rebuild": "npm run clean && npm run build",
-    "link": "ln -s $(pwd)/dist ~/.local/share/gnome-shell/extensions/rail-speed@raphael-wirnsberger.at",
+    "link": "ln -sfn $(pwd)/dist ~/.local/share/gnome-shell/extensions/rail-speed@raphael-wirnsberger.at",
     "links": "echo $(pwd)/dist",
     "reset": "gnome-extensions reset rail-speed@raphael-wirnsberger.at",
     "enable": "gnome-extensions enable rail-speed@raphael-wirnsberger.at",
