--- a/package.json
+++ b/package.json
@@ -41,12 +41,11 @@
   },
   "homepage": "https://github.com/raphi-0901/rail-speed#readme",
   "devDependencies": {
-    "@girs/clutter-15": "^15.0.0-4.0.0-beta.38",
-    "@girs/gio-2.0": "^2.86.0-4.0.0-beta.38",
-    "@girs/glib-2.0": "^2.86.0-4.0.0-beta.38",
-    "@girs/gnome-shell": "^46.0.2",
     "@girs/soup-3.0": "^3.6.5-4.0.0-beta.38",
-    "@girs/st-15": "^15.0.0-4.0.0-beta.38",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@girs/gjs": "^4.0.0-beta.38",
+    "@girs/gnome-shell": "^49.1.0"
   }
 }
